Add content to index file and css file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cutive|Dosis:400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-
+<div class="container grid grid-middle p">
+  <div class="opening-box-postion unit xs-1 xl-0 pad-t-2">
+    <p class="opening-box text-set-1 text-center max-length pad-t-1-2 pad-b-1-2 push-0 mega">Three things cannot be long hidden:</p>
+  </div>
+  <div class="sun-background-color unit xs-0 s-0 m-1 l-1-2">
+    <p class="text-set-2 text-upper text-left tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">sun,</span></p>
+  </div>
+  <div class="moon-background-color unit xs-0 s-0 m-0 l-1-2">
+    <p class="text-set-2 text-upper text-right tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">moon,</span></p>
+  </div>
+  <div class="closing-box closing-box-position unit xs-0 s-0 m-0 l-0 xl-1 push">
+    <p class="text-set-1 text-center push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth</span></p>
+  </div>
+</div>
 </body>
 </html>
