Remove unnecessary class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-  <div class="container grid grid-middle p">
+  <div class="container grid grid-middle">
     <div class="opening-box-postion unit xs-1 xl-0 pad-t-2">
       <h1 class="opening-box text-set-1 text-center max-length pad-t-1-2 pad-b-1-2 push-0 mega">Three things cannot be long hidden:</h1>
     </div>
