Adjust h1 font size from mega to giga

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container grid grid-middle">
     <div class="opening-box-postion unit xs-1 xl-0 pad-t-2">
-      <h1 class="opening-box text-set-1 text-center max-length pad-t-1-2 pad-b-1-2 push-0 mega">Three things cannot be long hidden:</h1>
+      <h1 class="opening-box text-set-1 text-center max-length pad-t-1-2 pad-b-1-2 push-0 giga">Three things cannot be long hidden:</h1>
     </div>
     <div class="sun-background-color unit xs-0 s-0 m-1 l-1-2">
       <p class="text-set-2 text-upper text-left tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">sun,</span></p>
