Corrected spelling of content

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div class="moon-background-color unit xs-0 s-0 m-0 l-1-2">
       <p class="text-set-2 text-upper text-right tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">moon,</span></p>
     </div>
-    <div class="closing-box closing-box-position unit xs-0 s-0 m-0 l-0 xl-1 push">
-      <p class="text-set-1 text-center push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth</span></p>
+    <div class="closing-box closing-box-position unit xs-0 s-0 m-0 l-0 xl-1 push-1-2">
+      <p class="text-set-1 text-center gutter-1-4 push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth.</span></p>
+      <footer class="text-set-2 text-right gutter-1-4"<cite>-Buddha</cite></footer>
     </div>
   </div>
 </body>
