Add more friendly modules to index file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-  <div class="container grid grid-middle">
-    <div class="opening-box-postion unit xs-1 xl-0 pad-t-2">
-      <h1 class="opening-box text-set-1 text-center max-length pad-t-1-2 pad-b-1-2 push-0 giga">Three things cannot be long hidden:</h1>
+  <div class="relative grid">
+    <div class="unit xs-1 xl-0 pad-t-2 absolute">
+      <h1 class="opening-box pin-center-top w-1-2 text-set-1 text-center pad-t-1-2 pad-b-1-2 push-0 giga">Three things cannot be long hidden:</h1>
     </div>
     <div class="sun-background-color unit xs-0 s-0 m-1 l-1-2">
       <p class="text-set-2 text-upper text-left tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">sun,</span></p>
@@ -21,9 +21,9 @@
     <div class="moon-background-color unit xs-0 s-0 m-0 l-1-2">
       <p class="text-set-2 text-upper text-right tera push-0 gutter-2 pad-t-2 pad-b-2">the<br><span class="exa bold">moon,</span></p>
     </div>
-    <div class="closing-box closing-box-position unit xs-0 s-0 m-0 l-0 xl-1 push-1-2">
-      <p class="text-set-1 text-center gutter-1-4 push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth.</span></p>
-      <footer class="text-set-2 text-right gutter-1-4"<cite>-Buddha</cite></footer>
+    <div class="unit xs-0 s-0 m-0 l-0 xl-1 push-1-2 absolute pin-center-bottom">
+      <p class="closing-box pin-center-bottom text-set-1 text-center gutter-1-4 push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth.</span></p>
+      <footer class=" citation pin-right-bottom text-set-2 text-right gutter-1-4"<cite>-Buddha</cite></footer>
     </div>
   </div>
 </body>
