Fix the error in line 26

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="unit xs-0 s-0 m-0 l-0 xl-1 push-1-2 absolute pin-center-bottom">
       <p class="closing-box pin-center-bottom text-set-1 text-center gutter-1-4 push-0 giga">and the<br><span class="text-set-2 text-upper bold zetta">truth.</span></p>
-      <footer class=" citation pin-right-bottom text-set-2 text-right gutter-1-4"<cite>-Buddha</cite></footer>
+      <footer class=" citation pin-right-bottom text-set-2 text-right gutter-1-4"><cite>-Buddha</cite></footer>
     </div>
   </div>
 </body>
